updates dependencies to cdn, uses fetch instead of axios

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>md_render</title>
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/marked/marked.min.js"></script>
-	<script src="bower_components/axios/dist/axios.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.5.2/marked.min.js"></script>
 	<style>
 		#app {
 			height: 100vh;
